# sup-ai

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  archive.json  draft-thomson-aicontrol-sup.html  draft-thomson-aicontrol-sup.md  draft-thomson-aicontrol-sup.txt  draft-thomson-aipref-sup.html  draft-thomson-aipref-sup.md  draft-thomson-aipref-sup.txt  draft-todo-yourname-protocol.html  draft-todo-yourname-protocol.txt  index.html
.github/: CODEOWNERS
bad-lifetime/: draft-thomson-aipref-sup.html  draft-thomson-aipref-sup.txt  index.html
draft-thomson-aipref-sup-00/: draft-thomson-aipref-sup.html  draft-thomson-aipref-sup.txt  index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: eval.rs  parse.rs
src/: lib.rs  robots.rs
