[package]
name = "sup-ai-fuzz"
version = "0.1.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.sup-ai]
path = ".."

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "eval"
path = "fuzz_targets/eval.rs"
test = false
doc = false
bench = false
